# RINA

./: .env  Cargo.toml
src/: main.rs
